error: yet another lexical warning patch

--- a/init.org
+++ b/init.org
@@ -252,7 +252,16 @@ I get some compile warnings, this should hopefully remove them. They're usually 
 #+begin_src emacs-lisp
 (setq native-comp-async-report-warnings-errors 'silent) ;; native-comp warning
 (setq byte-compile-warnings '(not free-vars unresolved noruntime lexical make-local))
-(setq warning-suppress-types '((lexical-binding)))
+
+(require 'warnings)
+
+(defun suppress-lexical-binding-warnings (warn)
+  "Suppress warnings about missing lexical-binding cookies."
+  (if (string-match "Missing ‘lexical-binding’ cookie" (car warn))
+      (setq suppress-without-warning t) ; suppress the warning
+    nil))
+
+(add-hook 'warning-filter-hook 'suppress-lexical-binding-warnings)
 #+end_src
 
 Taken from Doom Emacs =core.el=
