--- a/init.org
+++ b/init.org
@@ -98,6 +98,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#python][Python]]
   - [[#java][Java]]
   - [[#c][C]]
+  - [[#html][HTML]]
   - [[#nix][Nix]]
 - [[#activating-custom-keybindings][Activating Custom Keybindings]]
   - [[#keybind-overrides][Keybind Overrides]]
@@ -1287,19 +1288,13 @@ The following code is taken from Lars Tveito
 
    #+begin_src emacs-lisp
    (use-package eglot
-     :defer t
-     :config
-     (add-to-list 'eglot-server-programs
-                  '(python-mode . ("pyright"))
-                  '(java-mode   . ("jdtls"))))
-                  ;; '(c-mode      . ("clang"))))
-                  ;; '(nix-mode    . ("nil"))))
+     :defer t)
 
    (defun eglot-format-on-save ()
      "Formats the buffer before save"
      (add-hook 'before-save-hook #'eglot-format-buffer nil t))
 
-   (defun local-compile-bind ()
+   (defun akselos/local-compile-bind ()
      "Adds a local keybind to compile"
      (local-set-key (kbd "C-c C-c") 'compile))
    #+end_src
@@ -1317,14 +1312,16 @@ The following code is taken from Lars Tveito
      :ensure nil
      :hook
      (python-mode . eglot-ensure)
-     (python-mode . py-autopep8-mode))
+     (python-mode . py-autopep8-mode)
+     :config
+     (add-to-list 'eglot-server-programs '(python-mode . ("pyright"))))
    #+end_src
    
 ** Java
    #+begin_src emacs-lisp
-   (defun compile-with-javac ()
+   (defun akselos/compile-with-javac ()
      "Set buffer local compile command for Java"
-     (local-compile-bind)
+     (akselos/local-compile-bind)
      (setq-local compile-command
                  (concat "javac " buffer-file-name)))
 
@@ -1333,14 +1330,16 @@ The following code is taken from Lars Tveito
      :hook
      (java-mode . eglot-ensure)
      (java-mode . eglot-format-on-save)
-     (java-mode . compile-with-javac))
+     (java-mode . akselos/compile-with-javac)
+     :config
+     (add-to-list 'eglot-server-programs '(java-mode   . ("jdtls"))))
    #+end_src
    
 ** C
    #+begin_src emacs-lisp
-   (defun compile-with-gcc ()
+   (defun akselos/compile-with-gcc ()
      "Set buffer local compile command for C"
-     (local-compile-bind)
+     (akselos/local-compile-bind)
      (setq-local compile-command
                  (concat "gcc -Wall -Wextra -Werror -pedantic " buffer-file-name)))
 
@@ -1349,15 +1348,34 @@ The following code is taken from Lars Tveito
      :hook
      (c-mode . eglot-ensure)
      (c-mode . eglot-format-on-save)
-     (c-mode . compile-with-gcc))
+     (c-mode . akselos/compile-with-gcc)
+     :config
+     ;; (add-to-list 'eglot-server-programs '(c-mode   . ("clang")))
+     )
+
    #+end_src
+   
+** HTML
+   #+begin_src emacs-lisp
+   (use-package html-mode
+     :ensure nil
+     :hook
+     (html-mode . eglot-ensure)
+     (html-mode . eglot-format-on-save)
+     :config
+     (add-to-list 'eglot-server-programs
+                  '(html-mode   . ("vscode-langservers-extracted"))))
+   #+end_src
+   
 ** Nix
    #+begin_src emacs-lisp
    (use-package nix-mode
      :mode ("\\.nix\\'" "\\.nix.in\\'")
      :hook
      (nix-mode . eglot-ensure)
-     (nix-mode . eglot-format-on-save))
+     (nix-mode . eglot-format-on-save)
+     :config
+     (add-to-list 'eglot-server-programs '(nix-mode    . ("nil"))))
 
    (use-package nix-drv-mode
      :ensure nix-mode
