--- a/init.org
+++ b/init.org
@@ -1376,6 +1376,7 @@ The following code is taken from Lars Tveito
    #+begin_src emacs-lisp
    (use-package nix-mode
      :mode ("\\.nix\\'" "\\.nix.in\\'")
+     :after eglot
      :hook
      (nix-mode . eglot-ensure)
      (nix-mode . eglot-format-on-save)
@@ -1384,7 +1385,7 @@ The following code is taken from Lars Tveito
                                                        :initializationOptions
                                                        :nil
                                                        :formatting
-                                                       :command "alejandra"
+                                                       :command ["alejandra"]
                                                        ))))
 
    (use-package nix-drv-mode
