--- a/init.org
+++ b/init.org
@@ -101,6 +101,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#c][C]]
   - [[#html][HTML]]
   - [[#scheme][Scheme]]
+  - [[#postgresql][PostgreSQL]]
   - [[#nix][Nix]]
 - [[#activating-custom-keybindings][Activating Custom Keybindings]]
   - [[#keybind-overrides][Keybind Overrides]]
@@ -419,7 +420,7 @@ This code snippet is taken from [[https://www.rahuljuliato.com/posts/auto-dark-c
   (setq custom-safe-themes t) ; Stop asking me damnit
   
   (setq auto-dark-themes '((catppuccin) (catppuccin)))
-  (setq auto-dark-polling-interval-seconds 5))
+  (setq auto-dark-polling-interval-seconds 1))
 #+end_src
 
 *** Disable themes when switching
@@ -1383,6 +1384,14 @@ The following code is taken from Lars Tveito
      :requires geiser)
    #+end_src
 
+** PostgreSQL
+   #+begin_src emacs-lisp :tangle no
+   (use-package sql-mode
+     :ensure nil
+     :config
+     (sql-set-product 'postgres)
+     )
+   #+end_src
 ** Nix
    #+begin_src emacs-lisp
    (use-package nix-mode
