--- a/init.org
+++ b/init.org
@@ -98,6 +98,7 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#just][Just]]
   - [[#python][Python]]
   - [[#java][Java]]
+  - [[#kotlin][Kotlin]]
   - [[#c][C]]
   - [[#html][HTML]]
   - [[#scheme][Scheme]]
@@ -1341,6 +1342,10 @@ The following code is taken from Lars Tveito
      (add-to-list 'eglot-server-programs '(java-mode . ("jdtls"))))
    #+end_src
    
+** Kotlin
+   #+begin_src emacs-lisp
+   (use-package kotlin-mode)
+   #+end_src
 ** C
    #+begin_src emacs-lisp
    (defun akselos/compile-with-gcc ()
@@ -1391,7 +1396,9 @@ The following code is taken from Lars Tveito
      (sql-mode . sqlformat-on-save-mode)
      :config
      (setq sqlformat-command 'pgformatter)
-     (setq sql-set-dialect 'postgres))
+     (setq sql-set-dialect 'postgres)
+     (setq sqlformat-args '("M" "-p '-- pgfmt: off(?:.*)?-- pgfmt: on'"))
+     )
    #+end_src
 
 ** Nix
