--- a/init.org
+++ b/init.org
@@ -64,7 +64,6 @@ I mainly run this with my nix dotfiles, you can view those [[https://github.com/
   - [[#vertico-posframe][Vertico Posframe]]
   - [[#orderless][Orderless]]
   - [[#corfu][Corfu]]
-  - [[#corfu-candidate-overlay][Corfu Candidate Overlay]]
   - [[#dabbrev][Dabbrev]]
   - [[#cape][Cape]]
 - [[#search][Search]]
@@ -748,38 +747,30 @@ I use [[https://github.com/minad/corfu][corfu]] for =completion-in-region=. I wi
   :init
   (corfu-popupinfo-mode)
   (corfu-echo-mode)
+  (global-set-key (kbd "C-<tab>") 'completion-at-point)
   :config
   (keymap-unset corfu-map "RET")
   :custom
   (corfu-auto nil)
+  (corfu-auto-prefix 2)
+  (corfu-auto-delay 0.25)
   (corfu-cycle t))
-#+end_src
-
-** Corfu Candidate Overlay
-Show first candidate in an inline overlay while typing. When there is only
-one candidate the overlay text will be underlined.
-
-#+begin_src emacs-lisp
-(use-package corfu-candidate-overlay
-  :after corfu
-  :init
-  (global-set-key (kbd "C-<tab>") 'completion-at-point)
-  (corfu-candidate-overlay-mode))
 #+end_src
 
 ** Dabbrev
    #+begin_src emacs-lisp
-;; Use Dabbrev with Corfu!
-(use-package dabbrev
-  ;; Swap M-/ and C-M-/
-  :bind (("M-/" . dabbrev-completion)
-         ("C-M-/" . dabbrev-expand))
-  :config
-  (add-to-list 'dabbrev-ignored-buffer-regexps "\\` ")
-  (add-to-list 'dabbrev-ignored-buffer-modes 'authinfo-mode)
-  (add-to-list 'dabbrev-ignored-buffer-modes 'doc-view-mode)
-  (add-to-list 'dabbrev-ignored-buffer-modes 'pdf-view-mode)
-  (add-to-list 'dabbrev-ignored-buffer-modes 'tags-table-mode))
+   ;; Use Dabbrev with Corfu!
+   (use-package dabbrev
+     ;; Swap M-/ and C-M-/
+     :ensure nil
+     :bind (("M-/" . dabbrev-completion)
+            ("C-M-/" . dabbrev-expand))
+     :config
+     (add-to-list 'dabbrev-ignored-buffer-regexps "\\` ")
+     (add-to-list 'dabbrev-ignored-buffer-modes 'authinfo-mode)
+     (add-to-list 'dabbrev-ignored-buffer-modes 'doc-view-mode)
+     (add-to-list 'dabbrev-ignored-buffer-modes 'pdf-view-mode)
+     (add-to-list 'dabbrev-ignored-buffer-modes 'tags-table-mode))
    #+end_src
 
 ** Cape
